Compiler/src/main/java/Testing/Tests/SemanticTests/failing/InvalidOverrideType.ru
struct A{}

impl A{
.(){}
fn m1(Int a) -> void{} }

struct B : A{}

impl B{
.(){}
fn m1(Char b) -> void{}}

start{}